bugfix: invisible previewer on mobile won't intercept touch events

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -738,6 +738,7 @@ h1 {
 .previewer-invisible {
     opacity: 0;
     max-height: 0;
+    visibility: hidden;
 }
 
 .previewer-visible {
